traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:18: error: ';' expected but identifier found.
  } ligne(y);
    ^